--- a/.nais/redis/redis-config.yaml
+++ b/.nais/redis/redis-config.yaml
@@ -3,6 +3,9 @@ kind: "Application"
 metadata:
   labels:
     team: teamsykefravr
+  annotations:
+    "nais.io/run-as-group": "0"
+    "nais.io/read-only-file-system": "false"
   namespace: teamsykefravr
   name: syfoperson-redis
 spec:
