--- a/.github/workflows/snyk.yaml
+++ b/.github/workflows/snyk.yaml
@@ -1,5 +1,5 @@
-name: Security 
-on: 
+name: Security
+on:
   push:
     branches:
       - master
@@ -15,6 +15,8 @@ jobs:
         uses: snyk/actions/gradle-jdk11@master
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+          ORG_GRADLE_PROJECT_githubUser: x-access-token
+          ORG_GRADLE_PROJECT_githubPassword: ${{ secrets.GITHUB_TOKEN }}
         with:
           command: monitor
           args: --org=teamsykefravr --project-name=${{ github.repository }}
