--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -42,6 +42,9 @@ spec:
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: dev-fss
+        - application: finnfastlege
+          namespace: teamsykefravr
+          cluster: dev-gcp
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: dev-fss
