--- a/.nais/naiserator-prod.yaml
+++ b/.nais/naiserator-prod.yaml
@@ -42,6 +42,9 @@ spec:
         - application: finnfastlege
           namespace: teamsykefravr
           cluster: prod-fss
+        - application: finnfastlege
+          namespace: teamsykefravr
+          cluster: prod-gcp
         - application: syfomodiaperson
           namespace: teamsykefravr
           cluster: prod-fss
