--- a/.github/workflows/dispatch.yaml
+++ b/.github/workflows/dispatch.yaml
@@ -8,17 +8,10 @@ on:
         required: true
         default: ""
 
-env:
-  IMAGE: docker.pkg.github.com/${{ github.repository }}/syfoperson:${{ github.event.inputs.gitCommit }}
-
 jobs:
   deploy-dev:
     name: Deploy to NAIS Dev-gcp
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: nais/deploy/actions/deploy@v1
-        env:
-          APIKEY: ${{ secrets.NAIS_DEPLOY_APIKEY }}
-          CLUSTER: dev-gcp
-          RESOURCE: .nais/naiserator-dev.yaml
+    uses: navikt/isworkflows/.github/workflows/manual-deploy-dev.yml@master
+    with:
+      git-commit: ${{ github.event.inputs.gitCommit }}
+    secrets: inherit
