--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -59,8 +59,8 @@ spec:
         - host: "pdl-api.dev-fss-pub.nais.io"
         - host: "skjermede-personer-pip.dev.intern.nav.no"
         - host: "syfo-tilgangskontroll.dev-fss-pub.nais.io"
+        - host: "digdir-krr-proxy.intern.dev.nav.no"
       rules:
-        - application: digdir-krr-proxy
         - application: syfoperson-redis
   azure:
     application:
