--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -54,6 +54,15 @@ spec:
         - application: syfooversikt
           namespace: teamsykefravr
           cluster: dev-fss
+        - application: syfomodiaperson
+          namespace: teamsykefravr
+          cluster: dev-gcp
+        - application: syfomoteoversikt
+          namespace: teamsykefravr
+          cluster: dev-gcp
+        - application: syfooversikt
+          namespace: teamsykefravr
+          cluster: dev-gcp
     outbound:
       external:
         - host: "pdl-api.dev-fss-pub.nais.io"
