--- a/.nais/alerts.yaml
+++ b/.nais/alerts.yaml
@@ -1,19 +1,21 @@
-apiVersion: "nais.io/v1"
-kind: "Alert"
+apiVersion: monitoring.coreos.com/v1
+kind: PrometheusRule
 metadata:
   name: syfoperson-alerts
   namespace: teamsykefravr
   labels:
     team: teamsykefravr
 spec:
-  receivers:
-    slack:
-      channel: '#syfo-alarm'
-      prependText: '<!here> | '
-  alerts:
-    - alert: SYFOPERSON IS DOWN
-      expr: sum(up{app="syfoperson", job="kubernetes-pods"}) == 0
-      for: 30s
-      description: "Det er ingen pods for app kjørende i namespace og dermed er appen nede"
-      action: "Undersøk hvorfor pods er nede og få den kjørende igjen!"
-      severity: danger
+  groups:
+    - name: syfoperson-alerts
+      rules:
+        - alert: SYFOPERSON IS DOWN
+          expr: kube_deployment_status_replicas_available{deployment="syfoperson"} == 0
+          for: 30s
+          annotations:
+            consequence: Application is unavailable
+            action: "Undersøk hvorfor pods er nede og få den kjørende igjen!"
+            summary: "Det er ingen pods for app kjørende i namespace og dermed er appen nede"
+          labels:
+            namespace: teamsykefravr
+            severity: danger
