IS-1848: Add KodeverkClient
It's needed for fetching poststed so we can display it in the personkort
in syfomodiaperson.
The next step is to create a new Adresse object we can map this into
before it's returned to frontend, instead of using pdl objects.

--- a/.nais/naiserator-dev.yaml
+++ b/.nais/naiserator-dev.yaml
@@ -45,6 +45,7 @@ spec:
     outbound:
       external:
         - host: "pdl-api.dev-fss-pub.nais.io"
+        - host: "kodeverk.dev-fss-pub.nais.io"
       rules:
         - application: syfoperson-redis
         - application: istilgangskontroll
@@ -81,3 +82,5 @@ spec:
       value: "dev-gcp.teamsykefravr.istilgangskontroll"
     - name: ISTILGANGSKONTROLL_URL
       value: "http://istilgangskontroll"
+    - name: KODEVERK_URL
+      value: "https://kodeverk.dev-fss-pub.nais.io"
